tests/samples/positive/generics/generic_struct_array_field.ax
module generic_struct_array_field;

struct Holder<T> {
    value: T;
}

fn touch(value: *mut Holder<[2]i32>) -> i32 {
    if ptraddr(value) == cast[usize](0) {
        return 0;
    }
    return 1;
}

fn main() -> i32 {
    return touch(null);
}
