tests/samples/negative/generics/duplicate_with_plain_fn.ax
module duplicate_with_plain_fn;

fn id[T](value: T) -> T {
    return value;
}

fn id(value: i32) -> i32 {
    return value;
}

fn main() -> i32 {
    return id(1);
}
